[package]
name = "jobshop-python"
version = "0.1.0"
authors = ["Mimikkk <Inwazzin@gmail.com>"]
edition = "2018"

[dependencies]
itertools = "*"
rand = "*"
futures = "*"
async-std = { version = "*", features = ["attributes"] }
chrono = "*"
serde = { version = "1.0.62", features = ["derive"] }
serde_json = "1.0.62"
custom_error = "*"
